Added edge cases

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,15 @@
         "expected": "cpp",
         "optional": "cpp",
         "variant": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "stacktrace": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp"
     }
 }
